[tool.poetry]
name = "rich-form"
version = "0.1.0"
description = ""
authors = ["kiril <stopcrybby@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
readchar = "^4.1.0"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
